# dote

./: .gitignore  LICENSES.org  Makefile.am  Makefile.in  README  README.org  README.txt  compare_version.awk  configure  configure.ac  dote.asd  quick_quicklisp.sh.in
data/characters/armor/: character.lisp  interaction.lisp
data/characters/container/: character.lisp  interaction.lisp
data/characters/elm/: character.lisp  interaction.lisp
data/characters/fountain/: character.lisp  interaction.lisp
data/characters/helm/: character.lisp  interaction.lisp
data/characters/inert/: character.lisp  interaction.lisp
data/characters/key/: character.lisp  interaction.lisp
data/characters/potion/: character.lisp  interaction.lisp
data/characters/potions/: character.lisp  interaction.lisp
data/characters/ring/: character.lisp  interaction.lisp
data/characters/shield/: character.lisp  interaction.lisp
data/characters/shoes/: interaction.lisp
data/characters/trap/: character.lisp  interaction.lisp
data/fonts/: default.tga  tooltip.tga
data/furniture-templates/: carpet.tga  corr-e-1.tga  corr-e-2.tga  corr-e-3.tga  corr-e-4.tga  corr-e-5.tga  corr-e-6.tga  corr-e-7.tga  corr-e-8.tga  corr-e-9.tga  corr-e.tga  corr-n.tga  corr-s.tga  corr.tga  cross-11.tga  cross-15.tga  cross-19.tga  cross-25.tga  lb-corner.tga  lu-corner.tga  other-2.tga  other-surrounded.tga  rb-corner.tga  ru-corner.tga  small-table-h.tga  small-table-v.tga  wall-e.tga  wall-n.tga  wall-s.tga  wall-w.tga
data/gui/default/: activation-overlay.tga  add-to-bag.tga  attack-long-range-imprecise-overlay.tga  attack-long-range-overlay.tga  attack-short-range-overlay.tga  bag.tga  basic-frame.tga  berserk.tga  bg-start.tga  blue-bar.tga  burn-mask.tga  button-pressed.tga  button.tga  cancel-overlay.tga  characteristics-overlay.tga  check-button-checked-green.tga  check-button.tga  chest-closed-locked.tga  chest-opened.tga  close-overlay.tga  coma.tga  config-camera-elevation.tga  config-change-selected-character.tga  config-look-at.tga  config-move.tga  config-rotation.tga  conversation-overlay.tga  down-arrow-overlay.tga  down-overlay.tga  drop-overlay.tga  elaborating-plan-spinner.tga  game-over.tga  green-bar.tga  immune-berserk.tga  immune-coma.tga  immune-poison.tga  immune-terror.tga  inventory-slot.tga  left-overlay.tga  load-overlay.tga  (+49 more)
data/maps/: test.lisp
data/names/: names.lisp  surnames.lisp
data/scripts/: radial-mountain-function.lisp
data/shaders/: ads.vert  aerial-explosion.frag  animated-billboard.frag  animated-billboard.vert  animated-icon.frag  animated-icon.vert  billboard-cyl.vert.inc.glsl  billboard.vert.inc.glsl  building-floor-ads.frag  building-floor-ads.vert  building-floor-bump.frag  building-floor-bump.vert  building-floor.frag  bump.vert  closing-curtain.frag  credit-item.frag  cyl-billboard.vert.inc.glsl  euler-integration.inc.vert.glsl  fade-flash.frag  fade-lava.frag  fade.frag  fog.frag.inc  fog.vert.inc  generic-particle-cyl.vert  generic-particle.vert  gui-fonts.frag  gui-naked-button.frag  gui.frag  gui.vert  lerp-feedback.vert  make-rotate-y-matrix.vert.inc.glsl  make-rotate-z-matrix.vert.inc.glsl  make-scale-matrix.vert.inc.glsl  make-translation-matrix.vert.inc.glsl  md2-ads.vert  md2-bump.vert  mesh-ads-inst.vert  mesh-ads.frag  mesh-ads.vert  mesh-bump-inst.vert  (+39 more)
data/spells/: angel-heart-1.lisp  angel-heart-2.lisp  angel-heart-3.lisp  cure-berserk-1.lisp  cure-berserk-2.lisp  cure-berserk-3.lisp  cure-faint-1.lisp  cure-poison-1.lisp  cure-poison-2.lisp  cure-poison-3.lisp  cure-terror-1.lisp  cure-terror-2.lisp  cure-terror-3.lisp  dispel-fow-1.lisp  dispel-fow-2.lisp  dispel-fow-3.lisp  heal-1.lisp  heal-2.lisp  heal-3.lisp  immune-berserk-1.lisp  immune-poison-1.lisp  immune-terror-1.lisp  poison-1.lisp  poison-2.lisp  poison-3.lisp  repair-weapon-1.lisp  summon-player.lisp  teleport-1.lisp  teleport-2.lisp  teleport-3.lisp  vampire-1.lisp  vampire-2.lisp  vampire-3.lisp
data/trees/: placeholder.lsys  quad.lsys  test.lsys
doc/internals/: ann.dtd  l-system.bnf  maps.bnf
m4/: ChangeLog
po/: ChangeLog  Makevars  POTFILES.in  dote.pot  en@boldquot.po  en@quot.po  it.po  random-map.pot
src/: 2d-tree.lisp  2d-utils.lisp  Makefile.am  able-to-see-mesh.lisp  action-scheduler.lisp  ai-logger.lisp  ai-utils-const.lisp  ai-utils.lisp  ann.lisp  arrows.lisp  attack-tactics.lisp  avatar-portrait.lisp  base64.lisp  basic-interaction-parameters.lisp  battle-utils.lisp  billboard.lisp  blackboard.lisp  bs-tree.lisp  buffered-input-file.lisp  building-floor-mesh-shell.lisp  building-floor-mesh.lisp  calc-game-opponents.lisp  camera.lisp  character.lisp  cl-gl-utils.lisp  color-utils.lisp  conditions.lisp  config.lisp.in  constants.lisp  container-mesh-shell.lisp  die-utils.lisp  door-mesh-shell.lisp  easter-egg.lisp  entity.lisp  euler.lisp  filesystem-utils.lisp  fonts8x8.lisp  fountain-mesh-shell.lisp  furniture-mesh-shell.lisp  game-configuration.lisp  (+104 more)
src/gui/: closing-sequence.lisp  configuration-windows.lisp  credits.lisp  full-screen-masks.lisp  gui-events.lisp  gui.lisp  inventory-window.lisp  load-save-window.lisp  new-game-window.lisp  opening-sequence.lisp  player-report-window.lisp  spell-window.lisp  splash-screen-progress-gauge.lisp  train-ai-window.lisp  widget.lisp
src/tests/: 2d-utils-test.lisp  action-scheduler-test.lisp  all-test.lisp  attack-tactics-test.lisp  avatar-test.lisp  base64-test.lisp  color-utils-test.lisp  decision-tree-test.lisp  gl-test.lisp  goap-test.lisp  graph-test.lisp  influence-map-test.lisp  interpolation-test.lisp  kanren-test.lisp  kd-tree-test.lisp  matrix-test.lisp  misc-test.lisp  mtree-test.lisp  num-test.lisp  package.lisp  pixmap-test.lisp  priority-queue-test.lisp  procedural-texture-test.lisp  quad-tree-test.lisp  quaternion-test.lisp  random-labyrinth-test.lisp  random-terrain-test.lisp  rb-tree-test.lisp  resource-cache-test.lisp  sb-cga-utils-test.lisp  terrain-chunk-test.lisp  ubvec4-test.lisp  uivec-test.lisp  uivec4-test.lisp  vec2-test.lisp  vec4-test.lisp  vec4-text.lisp
src/tests/data/: quad.tga
(+943 files in other folders)
