# dawn of the Era: a tactical game.
# Copyright (C) 2015  cage

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

SUBDIRS = po

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = config.rpath m4/ChangeLog ChangeLog dote.asd NOTES README.org src \
LICENSES.org COPYING

nobase_dist_pkgdata_DATA = data/scripts/radial-mountain-function.lisp \
data/names/surnames.lisp \
data/names/names.lisp \
data/models/ortnok/body01.md2 \
data/models/ortnok/body01.tag \
data/models/ortnok/body-animation.lisp \
data/models/ortnok/body-texture.tga \
data/models/ortnok/head01.md2 \
data/models/ortnok/head-animation.lisp \
data/models/ortnok/head-texture.tga \
data/models/objects/copper-coin/texture.tga \
data/models/objects/copper-coin/model.obj \
data/models/objects/copper-coin/model.mtl \
data/models/objects/gold-coin/texture.tga \
data/models/objects/gold-coin/model.obj \
data/models/objects/gold-coin/model.mtl \
data/models/objects/silver-coin/texture.tga \
data/models/objects/silver-coin/model.obj \
data/models/objects/silver-coin/model.mtl \
data/models/rat/texture.tga \
data/models/rat/rat.obj \
data/models/furnitures/fountain/texture.tga \
data/models/furnitures/fountain/model.obj \
data/models/furnitures/fountain/model.mtl \
data/models/furnitures/bookholder-stone/texture.tga \
data/models/furnitures/bookholder-stone/model.obj \
data/models/furnitures/bookholder-stone/model.mtl \
data/models/furnitures/armchair/armchair.obj \
data/models/furnitures/armchair/texture.tga \
data/models/furnitures/armchair/armchair.mtl \
data/models/furnitures/stool/texture.tga \
data/models/furnitures/stool/model.obj \
data/models/furnitures/stool/model.mtl \
data/models/furnitures/library/texture.tga \
data/models/furnitures/library/model.obj \
data/models/furnitures/library/model.mtl \
data/models/furnitures/chest/texture.tga \
data/models/furnitures/chest/model.obj \
data/models/furnitures/chest/model.mtl \
data/models/furnitures/showcase/texture.tga \
data/models/furnitures/showcase/model.obj \
data/models/furnitures/showcase/model.mtl \
data/models/furnitures/bookholder/texture.tga \
data/models/furnitures/bookholder/model.obj \
data/models/furnitures/bookholder/model.mtl \
data/models/furnitures/sarcofagus/texture.tga \
data/models/furnitures/sarcofagus/model.obj \
data/models/furnitures/sarcofagus/model.mtl \
data/models/furnitures/sacrifice-table/texture.tga \
data/models/furnitures/sacrifice-table/model.obj \
data/models/furnitures/sacrifice-table/model.mtl \
data/models/furnitures/crate/texture.tga \
data/models/furnitures/crate/model.obj \
data/models/furnitures/crate/model.mtl \
data/models/furnitures/chair/texture.tga \
data/models/furnitures/chair/model.obj \
data/models/furnitures/chair/chair.jpg \
data/models/furnitures/chair/model.mtl \
data/models/furnitures/barrel-water/texture.tga \
data/models/furnitures/barrel-water/model.obj \
data/models/furnitures/barrel-water/model.mtl \
data/models/furnitures/table/texture.tga \
data/models/furnitures/table/model.obj \
data/models/furnitures/table/model.mtl \
data/models/furnitures/fountain-blood/texture.tga \
data/models/furnitures/fountain-blood/model.obj \
data/models/furnitures/fountain-blood/model.mtl \
data/models/furnitures/barrel/texture.tga \
data/models/furnitures/barrel/barrel.mtl \
data/models/furnitures/barrel/barrel.obj \
data/trees/general/dead-tree-2.lsys \
data/trees/general/dead-tree-3.lsys \
data/trees/general/dead-tree.lsys \
data/trees/tropical/eucalyptus.lsys \
data/trees/tropical/palm-2.lsys \
data/trees/tropical/palm.lsys \
data/trees/texture/willow/texture.tga \
data/trees/texture/pattern_116/diffuse.tga \
data/trees/texture/lemon/texture.tga \
data/trees/texture/palm/texture.tga \
data/trees/texture/populus/texture.tga \
data/trees/texture/oak/texture.tga \
data/trees/texture/fir/texture.tga \
data/trees/texture/fir/texture-2.tga \
data/trees/texture/palm_2/texture.tga \
data/trees/texture/gumtree/texture.tga \
data/trees/texture/fern/texture.tga \
data/trees/temperate/lemon.lsys \
data/trees/temperate/fir.lsys \
data/trees/temperate/oak.lsys \
data/trees/temperate/fern.lsys \
data/trees/temperate/dead-oak.lsys \
data/trees/temperate/fir-2.lsys \
data/trees/temperate/populus.lsys \
data/trees/temperate/willow.lsys \
data/trees/temperate/pine/texture.tga \
data/trees/temperate/pine/pine.obj \
data/trees/temperate/pine/pine.mtl \
data/maps/test.lisp \
data/shaders/mesh-debug.vert \
data/shaders/skydome.vert \
data/shaders/terrain.frag \
data/shaders/gui-naked-button.frag \
data/shaders/mesh-ads.frag \
data/shaders/bump.vert \
data/shaders/tree-debug.frag \
data/shaders/terrain.vert \
data/shaders/water.frag \
data/shaders/gui.frag \
data/shaders/tree.vert \
data/shaders/mesh-bump.frag \
data/shaders/building-floor-bump.frag \
data/shaders/building-floor-bump.vert \
data/shaders/building-floor-ads.frag \
data/shaders/building-floor-ads.vert \
data/shaders/phong.frag \
data/shaders/ads.vert \
data/shaders/wall-decorated.vert \
data/shaders/mesh-bump.vert \
data/shaders/mesh-debug.frag \
data/shaders/gui.vert \
data/shaders/phong.vert \
data/shaders/tree-debug.vert \
data/shaders/mesh-ads.vert \
data/shaders/water.vert \
data/shaders/wall-decorated.frag \
data/shaders/skydome.frag \
data/shaders/tree.frag \
data/img/avatar-portrait/avatar_head_f3.tga \
data/img/avatar-portrait/avatar_eye_m3.tga \
data/img/avatar-portrait/avatar_mouth_m2.tga \
data/img/avatar-portrait/avatar_eye_f2.tga \
data/img/avatar-portrait/avatar_eye_m4.tga \
data/img/avatar-portrait/avatar_mouth_m8.tga \
data/img/avatar-portrait/avatar_eye_f8.tga \
data/img/avatar-portrait/avatar_hair_f6.tga \
data/img/avatar-portrait/avatar_eye_m8.tga \
data/img/avatar-portrait/avatar_eye_f5.tga \
data/img/avatar-portrait/avatar_accessory_15o.tga \
data/img/avatar-portrait/avatar_mouth_m1.tga \
data/img/avatar-portrait/avatar_hair_f5.tga \
data/img/avatar-portrait/avatar_hair_f8.tga \
data/img/avatar-portrait/avatar_accessory_12o.tga \
data/img/avatar-portrait/avatar_hair_m21.tga \
data/img/avatar-portrait/avatar_hair_m23.tga \
data/img/avatar-portrait/avatar_necklace_1o.tga \
data/img/avatar-portrait/avatar_head_m7.tga \
data/img/avatar-portrait/avatar_hair_f3.tga \
data/img/avatar-portrait/avatar_hair_f21.tga \
data/img/avatar-portrait/avatar_eye_m1.tga \
data/img/avatar-portrait/avatar_hair_f16.tga \
data/img/avatar-portrait/avatar_accessory_f14o.tga \
data/img/avatar-portrait/avatar_eye_f1.tga \
data/img/avatar-portrait/avatar_mouth_f2.tga \
data/img/avatar-portrait/avatar_necklace_3o.tga \
data/img/avatar-portrait/avatar_hair_f1.tga \
data/img/avatar-portrait/avatar_scar_1o.tga \
data/img/avatar-portrait/avatar_hair_f13.tga \
data/img/avatar-portrait/avatar_mustache_m1o.tga \
data/img/avatar-portrait/avatar_hair_m17.tga \
data/img/avatar-portrait/avatar_accessory_16o.tga \
data/img/avatar-portrait/avatar_hair_m11.tga \
data/img/avatar-portrait/avatar_beard_m1o.tga \
data/img/avatar-portrait/avatar_hair_m26.tga \
data/img/avatar-portrait/avatar_head_f11.tga \
data/img/avatar-portrait/avatar_head_m4.tga \
data/img/avatar-portrait/avatar_mouth_f1.tga \
data/img/avatar-portrait/avatar_hair_f11.tga \
data/img/avatar-portrait/avatar_accessory_f6o.tga \
data/img/avatar-portrait/avatar_eye_m2.tga \
data/img/avatar-portrait/avatar_hair_m2.tga \
data/img/avatar-portrait/avatar_hair_m18.tga \
data/img/avatar-portrait/avatar_necklace_4o.tga \
data/img/avatar-portrait/avatar_eyepatch_m1o.tga \
data/img/avatar-portrait/avatar_eye_f6.tga \
data/img/avatar-portrait/avatar_boa_1o.tga \
data/img/avatar-portrait/avatar_head_m6.tga \
data/img/avatar-portrait/avatar_hair_m9.tga \
data/img/avatar-portrait/avatar_hair_f9.tga \
data/img/avatar-portrait/avatar_hair_m1.tga \
data/img/avatar-portrait/avatar_hair_m8.tga \
data/img/avatar-portrait/avatar_hair_m14.tga \
data/img/avatar-portrait/avatar_beard_m3o.tga \
data/img/avatar-portrait/avatar_eyepatch_m2o.tga \
data/img/avatar-portrait/avatar_mouth_f3.tga \
data/img/avatar-portrait/avatar_hair_m7.tga \
data/img/avatar-portrait/avatar_hair_f20.tga \
data/img/avatar-portrait/avatar_scar_2o.tga \
data/img/avatar-portrait/avatar_head_f1.tga \
data/img/avatar-portrait/avatar_head_f13.tga \
data/img/avatar-portrait/avatar_necklace_m8o.tga \
data/img/avatar-portrait/avatar_head_m5.tga \
data/img/avatar-portrait/avatar_beard_m4o.tga \
data/img/avatar-portrait/avatar_head_f7.tga \
data/img/avatar-portrait/avatar_head_m9.tga \
data/img/avatar-portrait/avatar_head_f15.tga \
data/img/avatar-portrait/avatar_eye_f7.tga \
data/img/avatar-portrait/avatar_necklace_f7o.tga \
data/img/avatar-portrait/avatar_hair_f2.tga \
data/img/avatar-portrait/avatar_beard_m2o.tga \
data/img/avatar-portrait/avatar_head_m1.tga \
data/img/avatar-portrait/avatar_mouth_m5.tga \
data/img/avatar-portrait/avatar_necklace_6o.tga \
data/img/avatar-portrait/avatar_eye_m6.tga \
data/img/avatar-portrait/avatar_mouth_f8.tga \
data/img/avatar-portrait/avatar_head_m11.tga \
data/img/avatar-portrait/avatar_accessory_f7o.tga \
data/img/avatar-portrait/avatar_head_f4.tga \
data/img/avatar-portrait/avatar_accessory_18o.tga \
data/img/avatar-portrait/avatar_head_f5.tga \
data/img/avatar-portrait/avatar_head_f12.tga \
data/img/avatar-portrait/avatar_eye_f3.tga \
data/img/avatar-portrait/avatar_hair_f10.tga \
data/img/avatar-portrait/avatar_head_m2.tga \
data/img/avatar-portrait/avatar_head_m12.tga \
data/img/avatar-portrait/avatar_head_f14.tga \
data/img/avatar-portrait/avatar_boa_4o.tga \
data/img/avatar-portrait/avatar_hair_m4.tga \
data/img/avatar-portrait/avatar_head_m15.tga \
data/img/avatar-portrait/avatar_necklace_f8o.tga \
data/img/avatar-portrait/avatar_hair_m3.tga \
data/img/avatar-portrait/avatar_mouth_m4.tga \
data/img/avatar-portrait/avatar_hair_m22.tga \
data/img/avatar-portrait/avatar_mouth_f6.tga \
data/img/avatar-portrait/avatar_mouth_f7.tga \
data/img/avatar-portrait/avatar_head_f8.tga \
data/img/avatar-portrait/avatar_hair_m25.tga \
data/img/avatar-portrait/avatar_boa_2o.tga \
data/img/avatar-portrait/avatar_head_f2.tga \
data/img/avatar-portrait/avatar_mouth_m7.tga \
data/img/avatar-portrait/avatar_boa_3o.tga \
data/img/avatar-portrait/avatar_hair_m19.tga \
data/img/avatar-portrait/avatar_accessory_f5o.tga \
data/img/avatar-portrait/avatar_hair_m10.tga \
data/img/avatar-portrait/avatar_head_m8.tga \
data/img/avatar-portrait/avatar_hair_m6.tga \
data/img/avatar-portrait/avatar_head_f9.tga \
data/img/avatar-portrait/avatar_eye_m7.tga \
data/img/avatar-portrait/avatar_hair_f25.tga \
data/img/avatar-portrait/avatar_accessory_10o.tga \
data/img/avatar-portrait/avatar_hair_f17.tga \
data/img/avatar-portrait/avatar_hair_f22.tga \
data/img/avatar-portrait/avatar_head_m10.tga \
data/img/avatar-portrait/avatar_hair_f15.tga \
data/img/avatar-portrait/avatar_necklace_5o.tga \
data/img/avatar-portrait/avatar_mouth_f4.tga \
data/img/avatar-portrait/avatar_hair_f26.tga \
data/img/avatar-portrait/avatar_hair_f7.tga \
data/img/avatar-portrait/avatar_hair_m12.tga \
data/img/avatar-portrait/avatar_head_m3.tga \
data/img/avatar-portrait/avatar_hair_m20.tga \
data/img/avatar-portrait/avatar_head_f10.tga \
data/img/avatar-portrait/avatar_hair_f14.tga \
data/img/avatar-portrait/avatar_hair_m15.tga \
data/img/avatar-portrait/avatar_hair_f23.tga \
data/img/avatar-portrait/avatar_hair_f24.tga \
data/img/avatar-portrait/avatar_head_m14.tga \
data/img/avatar-portrait/avatar_necklace_2o.tga \
data/img/avatar-portrait/avatar_hair_f4.tga \
data/img/avatar-portrait/avatar_beard_m5o.tga \
data/img/avatar-portrait/avatar_hair_f12.tga \
data/img/avatar-portrait/avatar_hair_m13.tga \
data/img/avatar-portrait/avatar_sideburn_m1o.tga \
data/img/avatar-portrait/avatar_hair_f18.tga \
data/img/avatar-portrait/avatar_hair_m5.tga \
data/img/avatar-portrait/avatar_eye_f4.tga \
data/img/avatar-portrait/avatar_mouth_f5.tga \
data/img/avatar-portrait/avatar_hair_m24.tga \
data/img/avatar-portrait/avatar_mouth_m3.tga \
data/img/avatar-portrait/avatar_head_f6.tga \
data/img/avatar-portrait/avatar_hair_f19.tga \
data/img/avatar-portrait/avatar_head_m13.tga \
data/img/avatar-portrait/avatar_eye_m5.tga \
data/img/avatar-portrait/avatar_hair_m16.tga \
data/img/avatar-portrait/avatar_mouth_m6.tga \
data/gui/default/check-button.tga \
data/gui/default/ok-overlay.tga \
data/gui/default/green-bar.tga \
data/gui/default/close-overlay.tga \
data/gui/default/option-overlay.tga \
data/gui/default/attack-short-range-overlay.tga \
data/gui/default/inventory/a-armor04.tga \
data/gui/default/inventory/a-armor05.tga \
data/gui/default/inventory/a-armour01.tga \
data/gui/default/inventory/a-armour02.tga \
data/gui/default/inventory/a-armour03.tga \
data/gui/default/inventory/a-clothing01.tga \
data/gui/default/inventory/a-clothing02.tga \
data/gui/default/inventory/ac-medal01.tga \
data/gui/default/inventory/ac-medal02.tga \
data/gui/default/inventory/ac-medal03.tga \
data/gui/default/inventory/ac-medal04.tga \
data/gui/default/inventory/ac-necklace01.tga \
data/gui/default/inventory/ac-necklace02.tga \
data/gui/default/inventory/ac-necklace03.tga \
data/gui/default/inventory/ac-necklace04.tga \
data/gui/default/inventory/ac-necklace05.tga \
data/gui/default/inventory/ac-necklace06.tga \
data/gui/default/inventory/ac-necklace07.tga \
data/gui/default/inventory/ac-necklace08.tga \
data/gui/default/inventory/ac-ring01.tga \
data/gui/default/inventory/ac-ring02.tga \
data/gui/default/inventory/a-shoes01.tga \
data/gui/default/inventory/a-shoes02.tga \
data/gui/default/inventory/a-shoes03.tga \
data/gui/default/inventory/a-shoes04.tga \
data/gui/default/inventory/a-shoes05.tga \
data/gui/default/inventory/a-shoes06.tga \
data/gui/default/inventory/a-shoes07.tga \
data/gui/default/inventory/c-elm01.tga \
data/gui/default/inventory/c-elm03.tga \
data/gui/default/inventory/c-elm04.tga \
data/gui/default/inventory/c-hat01.tga \
data/gui/default/inventory/c-hat02.tga \
data/gui/default/inventory/e-bones02.tga \
data/gui/default/inventory/e-bones03.tga \
data/gui/default/inventory/e-gold01.tga \
data/gui/default/inventory/e-gold02.tga \
data/gui/default/inventory/e-metal01.tga \
data/gui/default/inventory/e-metal02.tga \
data/gui/default/inventory/e-metal03.tga \
data/gui/default/inventory/e-metal04.tga \
data/gui/default/inventory/e-metal05.tga \
data/gui/default/inventory/e-metal06.tga \
data/gui/default/inventory/e-metal07.tga \
data/gui/default/inventory/e-metal08.tga \
data/gui/default/inventory/e-metal09.tga \
data/gui/default/inventory/e-wood01.tga \
data/gui/default/inventory/e-wood02.tga \
data/gui/default/inventory/e-wood03.tga \
data/gui/default/inventory/e-wood04.tga \
data/gui/default/inventory/i-agate.tga \
data/gui/default/inventory/i-amethist.tga \
data/gui/default/inventory/i-antidote.tga \
data/gui/default/inventory/i-batwing.tga \
data/gui/default/inventory/i-birdsbeak.tga \
data/gui/default/inventory/i-bone.tga \
data/gui/default/inventory/i-book.tga \
data/gui/default/inventory/i-bottle01.tga \
data/gui/default/inventory/i-bottle02.tga \
data/gui/default/inventory/i-bottle03.tga \
data/gui/default/inventory/i-bottle04.tga \
data/gui/default/inventory/i-bronzebar.tga \
data/gui/default/inventory/i-bronzecoin.tga \
data/gui/default/inventory/i-cannon01.tga \
data/gui/default/inventory/i-cannon02.tga \
data/gui/default/inventory/i-cannon03.tga \
data/gui/default/inventory/i-cannon04.tga \
data/gui/default/inventory/i-cannon05.tga \
data/gui/default/inventory/i-c-banana.tga \
data/gui/default/inventory/i-c-bread.tga \
data/gui/default/inventory/i-c-carrot.tga \
data/gui/default/inventory/i-c-cheese.tga \
data/gui/default/inventory/i-c-cherry.tga \
data/gui/default/inventory/i-c-fish.tga \
data/gui/default/inventory/i-c-grapes.tga \
data/gui/default/inventory/i-c-greengrapes.tga \
data/gui/default/inventory/i-c-greenpepper.tga \
data/gui/default/inventory/i-chest01.tga \
data/gui/default/inventory/i-chest02.tga \
data/gui/default/inventory/i-c-lemon.tga \
data/gui/default/inventory/i-clock.tga \
data/gui/default/inventory/i-clover.tga \
data/gui/default/inventory/i-c-meat.tga \
data/gui/default/inventory/i-c-mulberry.tga \
data/gui/default/inventory/i-c-mushroom.tga \
data/gui/default/inventory/i-c-nut.tga \
data/gui/default/inventory/i-coal.tga \
data/gui/default/inventory/i-c-orange.tga \
data/gui/default/inventory/i-c-pear.tga \
data/gui/default/inventory/i-c-pie.tga \
data/gui/default/inventory/i-c-pineapple.tga \
data/gui/default/inventory/i-c-radish.tga \
data/gui/default/inventory/i-c-rawfish.tga \
data/gui/default/inventory/i-c-rawmeat.tga \
data/gui/default/inventory/i-c-redpepper.tga \
data/gui/default/inventory/i-crystal01.tga \
data/gui/default/inventory/i-crystal02.tga \
data/gui/default/inventory/i-crystal03.tga \
data/gui/default/inventory/i-c-strawberry.tga \
data/gui/default/inventory/i-c-watermellon.tga \
data/gui/default/inventory/i-c-yellowpepper.tga \
data/gui/default/inventory/i-diamond.tga \
data/gui/default/inventory/i-eye.tga \
data/gui/default/inventory/i-fabric.tga \
data/gui/default/inventory/i-fang.tga \
data/gui/default/inventory/i-feather01.tga \
data/gui/default/inventory/i-feather02.tga \
data/gui/default/inventory/i-fishtail.tga \
data/gui/default/inventory/i-foxtail.tga \
data/gui/default/inventory/i-frogleg.tga \
data/gui/default/inventory/i-goldbar.tga \
data/gui/default/inventory/i-goldcoin.tga \
data/gui/default/inventory/i-ink.tga \
data/gui/default/inventory/i-ironball.tga \
data/gui/default/inventory/i-jade.tga \
data/gui/default/inventory/i-key01.tga \
data/gui/default/inventory/i-key02.tga \
data/gui/default/inventory/i-key03.tga \
data/gui/default/inventory/i-key04.tga \
data/gui/default/inventory/i-key05.tga \
data/gui/default/inventory/i-key06.tga \
data/gui/default/inventory/i-key07.tga \
data/gui/default/inventory/i-leaf.tga \
data/gui/default/inventory/i-map.tga \
data/gui/default/inventory/i-mirror.tga \
data/gui/default/inventory/i-opal.tga \
data/gui/default/inventory/i-rabbitpaw.tga \
data/gui/default/inventory/i-rock01.tga \
data/gui/default/inventory/i-rock02.tga \
data/gui/default/inventory/i-rock03.tga \
data/gui/default/inventory/i-rock04.tga \
data/gui/default/inventory/i-rock05.tga \
data/gui/default/inventory/i-ruby.tga \
data/gui/default/inventory/i-sapphire.tga \
data/gui/default/inventory/i-scorpionclaw.tga \
data/gui/default/inventory/i-scroll02.tga \
data/gui/default/inventory/i-scroll.tga \
data/gui/default/inventory/i-silverbar.tga \
data/gui/default/inventory/i-silvercoin.tga \
data/gui/default/inventory/i-snailshell.tga \
data/gui/default/inventory/i-solidshell.tga \
data/gui/default/inventory/i-telescope.tga \
data/gui/default/inventory/i-tentacle.tga \
data/gui/default/inventory/i-torch01.tga \
data/gui/default/inventory/i-torch02.tga \
data/gui/default/inventory/i-water.tga \
data/gui/default/inventory/i-wolffur.tga \
data/gui/default/inventory/p-blue01.tga \
data/gui/default/inventory/p-blue02.tga \
data/gui/default/inventory/p-blue03.tga \
data/gui/default/inventory/p-blue04.tga \
data/gui/default/inventory/p-blue05.tga \
data/gui/default/inventory/p-blue06.tga \
data/gui/default/inventory/p-blue07.tga \
data/gui/default/inventory/p-blue08.tga \
data/gui/default/inventory/p-green01.tga \
data/gui/default/inventory/p-green02.tga \
data/gui/default/inventory/p-green03.tga \
data/gui/default/inventory/p-green04.tga \
data/gui/default/inventory/p-green05.tga \
data/gui/default/inventory/p-green06.tga \
data/gui/default/inventory/p-medicine01.tga \
data/gui/default/inventory/p-medicine02.tga \
data/gui/default/inventory/p-medicine03.tga \
data/gui/default/inventory/p-medicine04.tga \
data/gui/default/inventory/p-medicine05.tga \
data/gui/default/inventory/p-medicine06.tga \
data/gui/default/inventory/p-medicine07.tga \
data/gui/default/inventory/p-medicine08.tga \
data/gui/default/inventory/p-medicine09.tga \
data/gui/default/inventory/p-orange01.tga \
data/gui/default/inventory/p-orange02.tga \
data/gui/default/inventory/p-orange03.tga \
data/gui/default/inventory/p-orange04.tga \
data/gui/default/inventory/p-orange05.tga \
data/gui/default/inventory/p-orange06.tga \
data/gui/default/inventory/p-pink01.tga \
data/gui/default/inventory/p-pink02.tga \
data/gui/default/inventory/p-pink03.tga \
data/gui/default/inventory/p-pink04.tga \
data/gui/default/inventory/p-pink05.tga \
data/gui/default/inventory/p-pink06.tga \
data/gui/default/inventory/p-pink07.tga \
data/gui/default/inventory/p-pink08.tga \
data/gui/default/inventory/p-red01.tga \
data/gui/default/inventory/p-red02.tga \
data/gui/default/inventory/p-red03.tga \
data/gui/default/inventory/p-red04.tga \
data/gui/default/inventory/p-red05.tga \
data/gui/default/inventory/p-red06.tga \
data/gui/default/inventory/p-red07.tga \
data/gui/default/inventory/p-white01.tga \
data/gui/default/inventory/p-white02.tga \
data/gui/default/inventory/p-white03.tga \
data/gui/default/inventory/p-white04.tga \
data/gui/default/inventory/p-white05.tga \
data/gui/default/inventory/p-yellow01.tga \
data/gui/default/inventory/p-yellow02.tga \
data/gui/default/inventory/p-yellow03.tga \
data/gui/default/inventory/p-yellow04.tga \
data/gui/default/inventory/p-yellow05.tga \
data/gui/default/inventory/p-yellow06.tga \
data/gui/default/inventory/p-yellow07.tga \
data/gui/default/inventory/p-yellow08.tga \
data/gui/default/inventory/s-axe01.tga \
data/gui/default/inventory/s-axe02.tga \
data/gui/default/inventory/s-axe03.tga \
data/gui/default/inventory/s-axe04.tga \
data/gui/default/inventory/s-axe05.tga \
data/gui/default/inventory/s-axe06.tga \
data/gui/default/inventory/s-axe07.tga \
data/gui/default/inventory/s-bow01.tga \
data/gui/default/inventory/s-bow02.tga \
data/gui/default/inventory/s-bow03.tga \
data/gui/default/inventory/s-bow04.tga \
data/gui/default/inventory/s-bow05.tga \
data/gui/default/inventory/s-bow06.tga \
data/gui/default/inventory/s-bow07.tga \
data/gui/default/inventory/s-bow08.tga \
data/gui/default/inventory/s-bow09.tga \
data/gui/default/inventory/s-bow10.tga \
data/gui/default/inventory/s-bow11.tga \
data/gui/default/inventory/s-bow12.tga \
data/gui/default/inventory/s-bow13.tga \
data/gui/default/inventory/s-bow14.tga \
data/gui/default/inventory/s-buff01.tga \
data/gui/default/inventory/s-buff02.tga \
data/gui/default/inventory/s-buff03.tga \
data/gui/default/inventory/s-buff04.tga \
data/gui/default/inventory/s-buff05.tga \
data/gui/default/inventory/s-buff06.tga \
data/gui/default/inventory/s-buff07.tga \
data/gui/default/inventory/s-buff08.tga \
data/gui/default/inventory/s-buff09.tga \
data/gui/default/inventory/s-buff10.tga \
data/gui/default/inventory/s-buff11.tga \
data/gui/default/inventory/s-buff12.tga \
data/gui/default/inventory/s-buff13.tga \
data/gui/default/inventory/s-buff14.tga \
data/gui/default/inventory/s-dagger02.tga \
data/gui/default/inventory/s-dagger03.tga \
data/gui/default/inventory/s-dagger04.tga \
data/gui/default/inventory/s-dagger05.tga \
data/gui/default/inventory/s-dagger06.tga \
data/gui/default/inventory/s-earth01.tga \
data/gui/default/inventory/s-earth02.tga \
data/gui/default/inventory/s-earth03.tga \
data/gui/default/inventory/s-earth04.tga \
data/gui/default/inventory/s-earth05.tga \
data/gui/default/inventory/s-earth06.tga \
data/gui/default/inventory/s-earth07.tga \
data/gui/default/inventory/s-fire01.tga \
data/gui/default/inventory/s-fire02.tga \
data/gui/default/inventory/s-fire03.tga \
data/gui/default/inventory/s-fire04.tga \
data/gui/default/inventory/s-fire05.tga \
data/gui/default/inventory/s-fire06.tga \
data/gui/default/inventory/s-fire07.tga \
data/gui/default/inventory/s-fire08.tga \
data/gui/default/inventory/s-holy01.tga \
data/gui/default/inventory/s-holy02.tga \
data/gui/default/inventory/s-holy03.tga \
data/gui/default/inventory/s-holy04.tga \
data/gui/default/inventory/s-holy05.tga \
data/gui/default/inventory/s-holy06.tga \
data/gui/default/inventory/s-holy07.tga \
data/gui/default/inventory/s-holy08.tga \
data/gui/default/inventory/s-holy09.tga \
data/gui/default/inventory/s-holy10.tga \
data/gui/default/inventory/s-ice01.tga \
data/gui/default/inventory/s-ice02.tga \
data/gui/default/inventory/s-ice03.tga \
data/gui/default/inventory/s-ice04.tga \
data/gui/default/inventory/s-ice05.tga \
data/gui/default/inventory/s-ice06.tga \
data/gui/default/inventory/s-ice07.tga \
data/gui/default/inventory/s-ice08.tga \
data/gui/default/inventory/s-ice09.tga \
data/gui/default/inventory/s-light01.tga \
data/gui/default/inventory/s-light02.tga \
data/gui/default/inventory/s-light03.tga \
data/gui/default/inventory/s-light04.tga \
data/gui/default/inventory/s-magic01.tga \
data/gui/default/inventory/s-magic02.tga \
data/gui/default/inventory/s-magic03.tga \
data/gui/default/inventory/s-magic04.tga \
data/gui/default/inventory/s-magic05.tga \
data/gui/default/inventory/s-magic06.tga \
data/gui/default/inventory/s-magic07.tga \
data/gui/default/inventory/s-magic08.tga \
data/gui/default/inventory/s-magic09.tga \
data/gui/default/inventory/s-magic10.tga \
data/gui/default/inventory/s-magic11.tga \
data/gui/default/inventory/s-physic01.tga \
data/gui/default/inventory/s-physic02.tga \
data/gui/default/inventory/s-poison01.tga \
data/gui/default/inventory/s-poison02.tga \
data/gui/default/inventory/s-poison03.tga \
data/gui/default/inventory/s-poison04.tga \
data/gui/default/inventory/s-poison05.tga \
data/gui/default/inventory/s-poison06.tga \
data/gui/default/inventory/s-poison07.tga \
data/gui/default/inventory/s-poison08.tga \
data/gui/default/inventory/s-poison09.tga \
data/gui/default/inventory/s-shadow01.tga \
data/gui/default/inventory/s-shadow02.tga \
data/gui/default/inventory/s-shadow03.tga \
data/gui/default/inventory/s-shadow04.tga \
data/gui/default/inventory/s-shadow05.tga \
data/gui/default/inventory/s-shadow06.tga \
data/gui/default/inventory/s-shadow07.tga \
data/gui/default/inventory/s-shadow08.tga \
data/gui/default/inventory/s-shadow09.tga \
data/gui/default/inventory/s-shadow10.tga \
data/gui/default/inventory/s-shadow11.tga \
data/gui/default/inventory/s-shadow12.tga \
data/gui/default/inventory/s-shadow13.tga \
data/gui/default/inventory/s-shadow14.tga \
data/gui/default/inventory/s-shadow15.tga \
data/gui/default/inventory/s-shadow16.tga \
data/gui/default/inventory/s-sword01.tga \
data/gui/default/inventory/s-sword02.tga \
data/gui/default/inventory/s-sword03.tga \
data/gui/default/inventory/s-sword04.tga \
data/gui/default/inventory/s-sword05.tga \
data/gui/default/inventory/s-sword06.tga \
data/gui/default/inventory/s-sword07.tga \
data/gui/default/inventory/s-sword08.tga \
data/gui/default/inventory/s-sword09.tga \
data/gui/default/inventory/s-sword10.tga \
data/gui/default/inventory/s-sword15.tga \
data/gui/default/inventory/s-sword16.tga \
data/gui/default/inventory/s-sword17.tga \
data/gui/default/inventory/s-sword18.tga \
data/gui/default/inventory/s-sword19.tga \
data/gui/default/inventory/s-sword20.tga \
data/gui/default/inventory/s-sword21.tga \
data/gui/default/inventory/s-thunder01.tga \
data/gui/default/inventory/s-thunder02.tga \
data/gui/default/inventory/s-thunder03.tga \
data/gui/default/inventory/s-thunder04.tga \
data/gui/default/inventory/s-thunder05.tga \
data/gui/default/inventory/s-thunder06.tga \
data/gui/default/inventory/s-thunder07.tga \
data/gui/default/inventory/s-water01.tga \
data/gui/default/inventory/s-water02.tga \
data/gui/default/inventory/s-water03.tga \
data/gui/default/inventory/s-water04.tga \
data/gui/default/inventory/s-water05.tga \
data/gui/default/inventory/s-water06.tga \
data/gui/default/inventory/s-water07.tga \
data/gui/default/inventory/s-wind01.tga \
data/gui/default/inventory/s-wind02.tga \
data/gui/default/inventory/s-wind03.tga \
data/gui/default/inventory/s-wind04.tga \
data/gui/default/inventory/s-wind05.tga \
data/gui/default/inventory/s-wind06.tga \
data/gui/default/inventory/s-wind07.tga \
data/gui/default/inventory/w-axe001.tga \
data/gui/default/inventory/w-axe002.tga \
data/gui/default/inventory/w-axe003.tga \
data/gui/default/inventory/w-axe004.tga \
data/gui/default/inventory/w-axe005.tga \
data/gui/default/inventory/w-axe006.tga \
data/gui/default/inventory/w-axe007.tga \
data/gui/default/inventory/w-axe008.tga \
data/gui/default/inventory/w-axe009.tga \
data/gui/default/inventory/w-axe010.tga \
data/gui/default/inventory/w-axe011.tga \
data/gui/default/inventory/w-axe012.tga \
data/gui/default/inventory/w-axe013.tga \
data/gui/default/inventory/w-axe014.tga \
data/gui/default/inventory/w-book01.tga \
data/gui/default/inventory/w-book02.tga \
data/gui/default/inventory/w-book03.tga \
data/gui/default/inventory/w-book04.tga \
data/gui/default/inventory/w-book05.tga \
data/gui/default/inventory/w-book06.tga \
data/gui/default/inventory/w-book07.tga \
data/gui/default/inventory/w-bow01.tga \
data/gui/default/inventory/w-bow02.tga \
data/gui/default/inventory/w-bow03.tga \
data/gui/default/inventory/w-bow04.tga \
data/gui/default/inventory/w-bow05.tga \
data/gui/default/inventory/w-bow06.tga \
data/gui/default/inventory/w-bow07.tga \
data/gui/default/inventory/w-bow08.tga \
data/gui/default/inventory/w-bow09.tga \
data/gui/default/inventory/w-bow10.tga \
data/gui/default/inventory/w-bow11.tga \
data/gui/default/inventory/w-bow12.tga \
data/gui/default/inventory/w-bow13.tga \
data/gui/default/inventory/w-bow14.tga \
data/gui/default/inventory/w-bow15.tga \
data/gui/default/inventory/w-bow16.tga \
data/gui/default/inventory/w-bow17.tga \
data/gui/default/inventory/w-dagger001.tga \
data/gui/default/inventory/w-dagger002.tga \
data/gui/default/inventory/w-dagger003.tga \
data/gui/default/inventory/w-dagger004.tga \
data/gui/default/inventory/w-dagger005.tga \
data/gui/default/inventory/w-dagger006.tga \
data/gui/default/inventory/w-dagger007.tga \
data/gui/default/inventory/w-dagger008.tga \
data/gui/default/inventory/w-dagger009.tga \
data/gui/default/inventory/w-dagger010.tga \
data/gui/default/inventory/w-dagger011.tga \
data/gui/default/inventory/w-dagger012.tga \
data/gui/default/inventory/w-dagger013.tga \
data/gui/default/inventory/w-dagger014.tga \
data/gui/default/inventory/w-dagger015.tga \
data/gui/default/inventory/w-dagger016.tga \
data/gui/default/inventory/w-dagger017.tga \
data/gui/default/inventory/w-dagger018.tga \
data/gui/default/inventory/w-dagger019.tga \
data/gui/default/inventory/w-dagger020.tga \
data/gui/default/inventory/w-dagger021.tga \
data/gui/default/inventory/w-fist001.tga \
data/gui/default/inventory/w-fist002.tga \
data/gui/default/inventory/w-fist003.tga \
data/gui/default/inventory/w-fist004.tga \
data/gui/default/inventory/w-fist005.tga \
data/gui/default/inventory/w-gold-axe.tga \
data/gui/default/inventory/w-gold-bow.tga \
data/gui/default/inventory/w-gold-dagger.tga \
data/gui/default/inventory/w-gold-mace.tga \
data/gui/default/inventory/w-gold-spear.tga \
data/gui/default/inventory/w-gold-sword.tga \
data/gui/default/inventory/w-gun001.tga \
data/gui/default/inventory/w-gun002.tga \
data/gui/default/inventory/w-gun003.tga \
data/gui/default/inventory/w-mace001.tga \
data/gui/default/inventory/w-mace002.tga \
data/gui/default/inventory/w-mace003.tga \
data/gui/default/inventory/w-mace004.tga \
data/gui/default/inventory/w-mace005.tga \
data/gui/default/inventory/w-mace006.tga \
data/gui/default/inventory/w-mace007.tga \
data/gui/default/inventory/w-mace008.tga \
data/gui/default/inventory/w-mace009.tga \
data/gui/default/inventory/w-mace010.tga \
data/gui/default/inventory/w-mace011.tga \
data/gui/default/inventory/w-mace012.tga \
data/gui/default/inventory/w-mace013.tga \
data/gui/default/inventory/w-mace014.tga \
data/gui/default/inventory/w-mace15.tga \
data/gui/default/inventory/w-mace16.tga \
data/gui/default/inventory/w-spear001.tga \
data/gui/default/inventory/w-spear002.tga \
data/gui/default/inventory/w-spear003.tga \
data/gui/default/inventory/w-spear004.tga \
data/gui/default/inventory/w-spear005.tga \
data/gui/default/inventory/w-spear006.tga \
data/gui/default/inventory/w-spear007.tga \
data/gui/default/inventory/w-spear008.tga \
data/gui/default/inventory/w-spear009.tga \
data/gui/default/inventory/w-spear010.tga \
data/gui/default/inventory/w-spear011.tga \
data/gui/default/inventory/w-spear012.tga \
data/gui/default/inventory/w-spear013.tga \
data/gui/default/inventory/w-spear014.tga \
data/gui/default/inventory/w-staff01.tga \
data/gui/default/inventory/w-staff02.tga \
data/gui/default/inventory/w-staff03.tga \
data/gui/default/inventory/w-staff04.tga \
data/gui/default/inventory/w-staff05.tga \
data/gui/default/inventory/w-staff06.tga \
data/gui/default/inventory/w-staff07.tga \
data/gui/default/inventory/w-staff08.tga \
data/gui/default/inventory/w-sword001.tga \
data/gui/default/inventory/w-sword002.tga \
data/gui/default/inventory/w-sword003.tga \
data/gui/default/inventory/w-sword004.tga \
data/gui/default/inventory/w-sword005.tga \
data/gui/default/inventory/w-sword006.tga \
data/gui/default/inventory/w-sword007.tga \
data/gui/default/inventory/w-sword008.tga \
data/gui/default/inventory/w-sword009.tga \
data/gui/default/inventory/w-sword010.tga \
data/gui/default/inventory/w-sword011.tga \
data/gui/default/inventory/w-sword012.tga \
data/gui/default/inventory/w-sword013.tga \
data/gui/default/inventory/w-sword014.tga \
data/gui/default/inventory/w-sword015.tga \
data/gui/default/inventory/w-sword016.tga \
data/gui/default/inventory/w-sword017.tga \
data/gui/default/inventory/w-sword018.tga \
data/gui/default/inventory/w-sword019.tga \
data/gui/default/inventory/w-sword020.tga \
data/gui/default/inventory/w-sword021.tga \
data/gui/default/inventory/w-sword022.tga \
data/gui/default/inventory/w-throw001.tga \
data/gui/default/inventory/w-throw002.tga \
data/gui/default/inventory/w-throw003.tga \
data/gui/default/inventory/w-throw004.tga \
data/gui/default/inventory/w-throw05.tga \
data/gui/default/zoom-overlay.tga \
data/gui/default/button-pressed.tga \
data/gui/default/button.tga \
data/gui/default/portrait-unknown.tga \
data/gui/default/next-overlay.tga \
data/gui/default/open-overlay.tga \
data/gui/default/inventory-slot.tga \
data/gui/default/attack-long-range-overlay.tga \
data/gui/default/load-overlay.tga \
data/gui/default/cancel-overlay.tga \
data/gui/default/ui_big_pieces_0.png \
data/gui/default/attack-long-range-imprecise-overlay.tga \
data/gui/default/basic-frame.tga \
data/gui/default/coma.tga \
data/gui/default/next-turn-overlay.tga \
data/gui/default/window.tga \
data/gui/default/magic-staff-overlay.tga \
data/gui/default/characteristics-overlay.tga \
data/gui/default/fantasy-tileset.png \
data/gui/default/text-field-focused.tga \
data/gui/default/previous-overlay.tga \
data/gui/default/terror.tga \
data/gui/default/text-field-overlay.tga \
data/gui/default/berserk.tga \
data/gui/default/square-button-pressed.tga \
data/gui/default/conversation-overlay.tga \
data/gui/default/text-field.tga \
data/gui/default/poison.tga \
data/gui/default/window-button.tga \
data/gui/default/window-top-bar.tga \
data/gui/default/unzoom-overlay.tga \
data/gui/default/blue-bar.tga \
data/gui/default/window-button-pressed.tga \
data/gui/default/red-bar.tga \
data/gui/default/check-button-checked-green.tga \
data/gui/default/square-button.tga \
data/gui/default/save-overlay.tga \
data/gui/default/quit-overlay.tga \
data/gui/default/check-button-overlay.tga \
data/gui/default/up-overlay.tga \
data/gui/default/down-overlay.tga \
data/gui/default/plus-overlay.tga \
data/gui/default/minus-overlay.tga \
data/fonts/default.tga


CONF_PATH_FILE = src/config.lisp

BUILT_SOURCES  = src/config.lisp

all-local:
	$(LISP_COMPILER) "--dynamic-space-size" "8192" \
	--eval "(asdf:load-system '$(PACKAGE))" \
	--eval "(in-package main-window)" \
	--eval "(sb-ext:save-lisp-and-die \"$(PACKAGE)\" :toplevel 'main-window::main :executable t :purify t :save-runtime-options t)"

clean-local:
	$(RM) $(CONF_PATH_FILE);

$(CONF_PATH_FILE):
	grep "^;" src/config.lisp.in                            >  $(CONF_PATH_FILE);
	echo -e "(in-package :config)\n"                        >> $(CONF_PATH_FILE);
	echo "(alexandria:define-constant +sys-data-dir+"       >> $(CONF_PATH_FILE);
	echo -e "\""$(pkgdatadir)"/data/\" :test #'string=)\n"  >> $(CONF_PATH_FILE);

	echo "(alexandria:define-constant +catalog-dir+"        >> $(CONF_PATH_FILE);
	echo -e "\""$(localedir)"\" :test #'string=)\n"         >> $(CONF_PATH_FILE);

	echo "(alexandria:define-constant +text-domain+"        >> $(CONF_PATH_FILE);
	echo -e "\""$(PACKAGE)"\" :test #'string=)\n"           >> $(CONF_PATH_FILE);

	echo "(alexandria:define-constant +program-name+"       >> $(CONF_PATH_FILE);
	echo -e "\""$(PACKAGE)"\" :test #'string=)\n"           >> $(CONF_PATH_FILE);
	cat  $(CONF_PATH_FILE).in | sed "\/^;;.*$\/d"             >> $(CONF_PATH_FILE);
